# rust-inline-cuda-tutorial

./: .gitattributes  .gitignore  Cargo.toml  README.md
chapter-0/: README.md
chapter-0/application/: Cargo.toml
chapter-0/application/src/: image.rs  main.rs
chapter-0/application/src/filter/: bilateral_parallel.rs  bilateral_sequential.rs
chapter-0/host/: Cargo.toml
chapter-0/host/benches/: chapter-0-benchmark.rs
chapter-0/host/src/: lib.rs
chapter-0/host/src/filter/: bilateral_parallel.rs  bilateral_sequential.rs  mod.rs
chapter-0/host/tests/: parallel.rs  sequential.rs
chapter-0/host/tests/utils/: mod.rs
chapter-1/: README.md
chapter-1/application/: Cargo.toml  build_kernel.rs
chapter-1/application/src/: image.rs  main.rs  static_cuda.rs
chapter-1/application/src/filter/: bilateral_cuda.rs  mod.rs
chapter-1/device/: Cargo.toml
chapter-1/device/src/: lib.rs
chapter-1/host/: Cargo.toml  build.rs
chapter-1/host/benches/: chapter-1-benchmark.rs
chapter-1/host/src/: lib.rs  static_cuda.rs
chapter-1/host/src/filter/: bilateral_cuda.rs
chapter-1/host/tests/: cuda.rs
chapter-1/host/tests/utils/: mod.rs
chapter-1/kernel/: Cargo.toml
chapter-1/kernel/src/: lib.rs
chapter-2/: README.md
chapter-2/host/: Cargo.toml  README.md  build.rs
chapter-2/host/src/: image.rs  lib.rs  static_cuda.rs
chapter-2/host/src/filter/: bilateral.rs  mod.rs
chapter-2/host/tests/: cuda.rs
chapter-2/host/tests/utils/: mod.rs
